Bug #33375 all_set corrupted on table object
Submitted: 19 Dec 2007 17:26 Modified: 17 Jan 2008 16:05
Reporter: Tomas Ulin Email Updates:
Status: Closed
Category:Server: RBR Severity:S1 (Critical)
Version:5.1 OS:Any
Assigned to: Tomas Ulin Target Version:5.1.23
Triage: D1 (Critical)

[19 Dec 2007 17:26] Tomas Ulin
Description:
manifests itself either as assertion in debug, or slave behaving strangely, not returning
rows... garbage...

How to repeat:
seen in telco as assertion in rpl_optimize
[19 Dec 2007 17:41] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/40218

ChangeSet@1.2649, 2007-12-19 18:42:49+01:00, tomas@whalegate.ndb.mysql.com +2 -0
  Bug #33375  	all_set corrupted on table object
  - make sure to reset the read and write sets
[19 Dec 2007 17:52] Tomas Ulin
queued in -ndb and telco clones
[19 Dec 2007 23:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/40239

ChangeSet@1.2768, 2007-12-20 00:52:34+01:00, jperkin@mysql.com +2 -0
  handler.cc, log_event.cc:
    Apply patch for bug #33375 (from -ndb tree) into 6.0.4 release clone
[7 Jan 2008 15:03] Jon Stephens
Documented in 5.1.23-ndb-6.3.7 changelog as follows:

        A replication slave could return "garbage" data
        that was not in recognizable row format due to a problem with
        the internal all_set() method. 

Left PQ status unchanged pending merges to mainline trees.
[7 Jan 2008 15:59] Jon Stephens
Also documented fix in 5.1.23-ndb-6.2.10 changelog. Left bug status unchanged.
[15 Jan 2008 16:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/41016

ChangeSet@1.2653, 2008-01-15 17:01:58+01:00, msvensson@pilot.mysql.com +2 -0
  Bug#33375 all_set corrupted on table object
   - make sure to reset the read and write sets
  
  
  handler.cc, log_event.cc:
    - make sure to reset the read and write sets
[17 Jan 2008 16:05] Jon Stephens
Updated changelog entry to show fix 5.1.23 and 6.0.4 per above comments. Closed.
[20 Feb 2008 16:02] Bugs System
Pushed into 5.1.24-rc
[20 Feb 2008 16:03] Bugs System
Pushed into 6.0.5-alpha
[25 Feb 2008 15:58] Bugs System
Pushed into 5.1.24-rc
[25 Feb 2008 16:04] Bugs System
Pushed into 6.0.5-alpha
[12 Mar 2008 23:02] Bugs System
Pushed into 6.0.4-alpha