Bug #33375  	all_set corrupted on table object - make sure to reset the read and write sets